2005-02-28  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix_test.dll.sources: Added Test/Mono.Unix/StdioFileStreamTest.cs.

2005-01-13  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix_test.dll.sources: Added Test/Mono.Unix/StdlibTest.cs.

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix.dll.sources: Add Mono.Unix/StdioFileStream.cs.

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* Makfile: Add testsuite.
	* Mono.Posix_test.dll.sources: Added; Files for testsuite.
	* Test: Directory added.

2004-12-28  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix.dll.sources: Add UnixDriveInfo and UnixPath.

2004-11-22  Raja R Harinath  <rharinath@novell.com>

	* Makefile (CLEAN_FILES): Clean up make-map.exe and the duplicated
	Mono.Posix.dll.

2004-11-18  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix.dll.sources: Add Mono.Unix/CdeclFunction.cs to the build.

2004-11-16  Jonathan Pryor  <jonpryor@vt.edu>

	+ Rename the Mono.Posix namespace to Mono.Unix.
	+ Copy the Mono.Posix files from the mono-1-0 branch to Mono.Posix (to
	  preserve backward compatibility).
	* Mono.Posix.dll.sources: Rename Mono.Posix to Mono.Unix, remove
	  IncludeAttribute and MapAttribute from Mono.Posix namespace (use the
	  ones in Mono.Unix instead).
	* Makefile: Update file paths to build from Mono.Unix.

2004-11-05  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix.dll.sources: Add lots of new files to the binding.

2004-06-03  Raja R Harinath  <rharinath@novell.com>

	* Makefile (Mono.Posix/make-map.exe): Depend on $(the_lib) to pick
	the name of the library from library.make.  This should make it
	parallel-make-safe.

2004-04-26  Jackson Harper  <jackson@ximian.com>

	* Makefile: Dont use explicit lib references so the proper lib
	directory is used. Output to profile directory.
	
2004-01-07  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Makefile: handle win32 paths and copy Mono.Posix.dll to Mono.Posix
	directory so that MS runtime finds it.
