@@ -1,3 +1,8 @@
+2005-04-29  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* StdioFileStreamTest.cs: Add FilePosition tests; remove `var = var` 
+	  lines (added to remove warnings, but now produces other warnings).
+
 2005-04-28  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* StdlibTest.cs: Calling a P/Invoke function from signal-handler context is
